# AM_CXXFLAGS = -Wall -Wextra -Wformat=2 -Wcast-qual -Wcast-align -Wwrite-strings -Wconversion -Wpointer-arith -Wshadow -pedantic
AM_CXXFLAGS = -Wall
bin_PROGRAMS = cedar mkcedar
include_HEADERS = cedar.h cedarpp.h

cedar_SOURCES = cedar.h cedarpp.h cedar.cc
mkcedar_SOURCES = cedar.h cedarpp.h mkcedar.cc
